tests/valid/conditional_statement/else.rs
/*
return: 2
*/

main(): int {
    a: int = 0;
    if (a)
        return 1;
    else
        return 2;
}